# nightshift

./: CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  cookiecutter-config-file.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
docs/: acknowledgement.md  api.rst  conf.py  index.md  installation.md  nighshift.afdesign
docs/ipynb/: coverage.ipynb  getstarted.ipynb  periodmatch.ipynb
nightshift/: __init__.py  __main__.py  main.py
tests/: test_all.py
tests/test_example/: test_coverage.py  test_hello.py
