[tool.poetry]
name = "nightshift"
version = "0.0.1"
description = "Compute and visualize observations phase coverage"
authors = ["Lionel J. Garcia <lionel_garcia@live.fr r>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.5"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
docutils = "*"
jupyterlab = "*"
myst-parser = "*"
twine = "*"
matplotlib = "^3.7.0"
sphinx-book-theme = "^1.0.0"
myst-nb = "*"
sphinx-copybutton = "*"
photutils = "^1.6.0"
scipy = "*"
scikit-image = "^0.20.0"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = [
  "sphinx",
  "docutils",
  "jupyterlab",
  "myst-parser",
  "twine",
  "sphinx-book-theme",
  "black",
  "myst-nb",
  "sphinx-copybutton",
]
